--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.suhas.factsbook.factsbook">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".FactsBookApp"
         android:allowBackup="true"
